Fri Jan 20 19:30:51 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/APG/Processes/Process_Mutex.cpp:
          Use ACE_TEST_ASSERT instead of ACE_ASSERT to fix warnings in gcc 4.6
          release builds

Fri Jan 20 19:06:02 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/APG/Containers/Allocator.cpp:
        * examples/Reactor/Misc/test_timer_queue.cpp:
          Use ACE_TEST_ASSERT instead of ACE_ASSERT to fix warnings in gcc 4.6
          release builds

Wed Jan 18 09:02:18 UTC 2012  Martin Corino  <mcorino@remedy.nl>

        * bin/fuzz.pl:
          Added suppress option to selectively disable checks.

Tue Jan 17 17:36:31 UTC 2012  Chip Jones  <jonesc@ociweb.com>

        * include/makeinclude/rules.local.GNU:
          Fixed 'no filename for -include' warning.

Mon Jan 16 21:58:44 UTC 2012  Chip Jones  <jonesc@ociweb.com>

        * bin/DependencyGenerator/GNUIDLDependencyWriter.pm:
        * bin/DependencyGenerator/GNUIDLObjectGenerator.pm:
        * bin/MakeProjectCreator/config/ace_idl_dependencies.mpb:

          Added these files to support generation of IDL dependencies
          for gnuace projects.

        * bin/MakeProjectCreator/config/acedefaults.mpb:
        * bin/MakeProjectCreator/config/global.features:

          Added IDL dependency as a feature defaulted to off.

        * bin/MakeProjectCreator/templates/gnu.mpd:

          Modified gnuace template to generate IDL dependency rules.

        * include/makeinclude/rules.common.GNU:
        * include/makeinclude/rules.local.GNU:
        * include/makeinclude/wrapper_macros.GNU:

          Added depend_idl.local rule.

          This is a merge of work done in the 'ace-mpc_performance'
          branch.

Mon Jan 16 10:33:37 UTC 2012  Martin Corino  <mcorino@remedy.nl>

        * ace/config-win32-common.h:
        * ace/config-win32-mingw.h:
          Moved MinGW specific block to common because the macros